# ZePark

./: .pre-commit-config.yaml  README.md
Desktop/: .gitignore  README.md  firebase_data.py  main.py  notes.md  pyproject.toml  rectangles.json  requirements.txt
Desktop/app/: main.css  main.py  source.py
Desktop/app/data/: __init__.py  parking_slot.py  provider.py  rectangle.py  source.py  video_source.py
Desktop/app/data/json/: provider.json  rectangles.json  slots.json
Desktop/app/data/resource/json/: rectangles.json  slots.json
Desktop/app/style/: main.css  tab1.css  tab2.css  tab3.css
Desktop/app/tab1/: __init__.py  main.py  parking_details.py  provider_details.py  tab1.py
Desktop/app/tab2/: __init__.py  cctv.py  main.py  source.py  tab2.py
Desktop/app/tab3/: __init__.py  background.py  canvas.py  main.css  main.py  point.py  rectangle.py  tab3.py
Desktop/archive/: firebase_data.py
Desktop/data/: grid6.json  parkings6.json  provider6.json  rectangles.json  slots.json
Desktop/firebase local data/: grid69.json  parkinigs69.json  provider6.json  provider69.json
Desktop/test/: video_playing.py
Desktop/test/tab2/: cctv.py  tab2.py
Desktop/trash/: main.py
Mobile/: README.md
Website/: README.md  envSample.txt  package-lock.json  package.json
Website/api/: index.js
Website/api/controllers/: auth.controller.js  parkingListing.controller.js  user.controller.js
Website/api/models/: Pricing.model.js  parkingSpot.model.js  user.model.js
Website/client/: index.html  package-lock.json  package.json  vite.config.js
Website/client/src/: App.jsx  (+2 more)
(+20 files in other folders)
