[project]
name = "zepark-desktop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.2",
    "cvzone>=1.6.1",
    "firebase-admin>=6.6.0",
    "numpy>=2.2.1",
    "opencv-python>=4.10.0.84",
    "pillow>=11.1.0",
    "pyside6>=6.8.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]
