[project]
name = "zepark-desktop"
version = "0.2.0"
description = "This is the desktop application for the ZePark project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvzone>=1.6.1",
    "firebase-admin>=6.6.0",
    "ipykernel>=6.29.5",
    "numpy>=2.2.1",
    "opencv-python>=4.10.0.84",
    "pillow>=11.1.0",
    "pyside6>=6.8.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.3.5",
]
